--- a/app/src/main/res/layout/activity_page1.xml
+++ b/app/src/main/res/layout/activity_page1.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="162dp"
+        android:layout_height="114dp"
         android:orientation="horizontal">
 
 
@@ -71,11 +71,23 @@
 
         <Button
             android:background="@drawable/btn"
-            android:id="@+id/button"
+            android:id="@+id/btnabout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ABOUT US"
             android:onClick="gotoaboutus"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+        <Button
+            android:background="@drawable/btn"
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ADMIN"
+            android:onClick="MovetoAdmin"/>
 
 
     </LinearLayout>
