--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".AdminLoginActivity">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="203dp"
+        android:layout_height="168dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="168dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/focus" />
 
@@ -32,7 +33,7 @@
 
     <LinearLayout
         android:layout_width="278dp"
-        android:layout_height="292dp"
+        android:layout_height="346dp"
         android:layout_gravity="center"
         android:orientation="vertical">
 
@@ -42,7 +43,7 @@
             android:layout_height="20dp" />
 
         <EditText
-            android:id="@+id/etemail"
+            android:id="@+id/etemail2"
             android:layout_width="match_parent"
             android:layout_height="62dp"
             android:ems="10"
@@ -52,10 +53,12 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="40dp" />
+            android:layout_height="20dp" />
+
+
 
         <EditText
-            android:id="@+id/etpass"
+            android:id="@+id/etpass2"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:ems="10"
@@ -67,22 +70,25 @@
             android:layout_height="40dp" />
 
         <Button
-            android:id="@+id/btnlogin"
+            android:id="@+id/btnlogin2"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/button"
-            android:onClick="LoginUser"
-            android:text="login"
-            />
+            android:onClick="LoginAdmin"
+            android:text="login" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvReg"
+        android:id="@+id/tvreg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="are you new?please sing up"
+        android:text="Register"
         android:textAlignment="center"
-        android:onClick="gotoreg"/>
+        android:onClick="gotoreg2"/>
 
 
 </LinearLayout>
