--- a/app/src/main/res/layout/activity_page1.xml
+++ b/app/src/main/res/layout/activity_page1.xml
@@ -23,11 +23,11 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_margin="@dimen/cardview_default_radius"
-            app:srcCompat="@drawable/focus" />
+            android:layout_weight="1"
+            app:srcCompat="@drawable/logo" />
 
 
     </LinearLayout>
@@ -71,23 +71,24 @@
 
         <Button
             android:background="@drawable/btn"
-            android:id="@+id/btnabout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ABOUT US"
-            android:onClick="gotoaboutus"/>
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp" />
-
-        <Button
-            android:background="@drawable/btn"
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ADMIN"
             android:onClick="MovetoAdmin"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="gotoaboutus"
+            android:text="Want to know more about us?Click here"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
 
 
     </LinearLayout>
