--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="grey">#DAD9D9</color>
     <color name="purple">#9C27B0</color>
+    <color name="white">#FBF6FC</color>
+    <color name="black">#050405</color>
 
 </resources>
