--- a/app/src/main/res/layout/activity_adimin_reg.xml
+++ b/app/src/main/res/layout/activity_adimin_reg.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@drawable/focus" />
+            app:srcCompat="@drawable/logo" />
 
 
 
@@ -33,7 +33,7 @@
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="57dp"
-            android:text="   SIGN UP"
+            android:text="   ADMIN SIGN UP"
             android:textAlignment="textStart"
             android:textColor="@color/purple"
             android:textSize="30sp" />
