--- a/app/src/main/res/layout/activity_admininsert.xml
+++ b/app/src/main/res/layout/activity_admininsert.xml
@@ -21,10 +21,10 @@
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
+            android:layout_width="444dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@drawable/focus" />
+            app:srcCompat="@drawable/logo" />
     </LinearLayout>
 
     <LinearLayout
@@ -46,7 +46,7 @@
             android:layout_width="202dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:foreground="@drawable/ic_add" />
+            android:foreground="@drawable/ic_person_black_24dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -78,7 +78,7 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="20dp" />
+            android:layout_height="50dp" />
 
 
         <Button
