--- a/app/src/main/res/layout/childrecycler.xml
+++ b/app/src/main/res/layout/childrecycler.xml
@@ -3,54 +3,72 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="310dp"
+    android:layout_height="260dp"
     android:orientation="vertical">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="232dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="97dp"
-            android:orientation="horizontal">
+            android:layout_height="155dp">
+
+            <ImageView
+                android:id="@+id/childimg"
+                android:layout_width="151dp"
+                android:layout_height="139dp"
+                android:background="@drawable/piccircle"
+                android:scaleType="centerCrop" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="139dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textColor="@color/black"
+                    android:textAlignment="center"
+                    android:textSize="26sp" />
+
+                <TextView
+                    android:id="@+id/tvdesc"
+                    android:layout_width="match_parent"
+                    android:layout_height="104dp"
+                    android:text="Description"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+
+                    />
+
+
+            </LinearLayout>
 
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="176dp">
-
-            <ImageView
-                android:id="@+id/childimg"
-                android:layout_width="151dp"
-                android:layout_height="152dp"
-                android:scaleType="centerCrop" />
+            android:layout_height="42dp"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tvname"
-                    android:layout_width="match_parent"
-                    android:layout_height="46dp"
-                    android:text="Name"
-                    android:textAlignment="center"
-                    android:textSize="30sp" />
-
-                <TextView
-                    android:id="@+id/tvdesc"
-                    android:layout_width="match_parent"
-                    android:layout_height="72dp"
-                    android:text="Description"
-                    android:textSize="24sp"
-
-                    />
+                <ImageView
+                    android:id="@+id/imgmsg"
+                    android:layout_width="194dp"
+                    android:layout_height="40dp"
+                    app:srcCompat="@drawable/ic_message"
+                    tools:ignore="VectorDrawableCompat" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -58,22 +76,14 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imgmsg"
-                        android:layout_width="131dp"
-                        android:layout_height="40dp"
-                        app:srcCompat="@drawable/ic_message"
-                        tools:ignore="VectorDrawableCompat" />
-
-                    <ImageView
                         android:id="@+id/imgcall"
-                        android:layout_width="wrap_content"
+                        android:layout_width="194dp"
                         android:layout_height="40dp"
-                        android:layout_weight="1"
                         app:srcCompat="@drawable/ic_call"
                         tools:ignore="VectorDrawableCompat" />
                 </LinearLayout>
-
             </LinearLayout>
+
 
         </LinearLayout>
 
